--- a/InventoryManager.MVC/Views/Start/Index.cshtml
+++ b/InventoryManager.MVC/Views/Start/Index.cshtml
@@ -51,7 +51,7 @@
                     <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                    <li><a class="getstarted scrollto" asp-controller="Start" asp-action="Register">Get Started</a></li>
+                    <li><a class="getstarted scrollto" asp-controller="User" asp-action="Register">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
@@ -67,7 +67,7 @@
                     <h1>Better Solutions For Your Business</h1>
                     <h2>We are team of talented designers making websites with Bootstrap</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
-                        <a asp-controller="Start" asp-action="Register" class="btn-get-started scrollto">Get Started</a>
+                        <a asp-controller="User" asp-action="Register" class="btn-get-started scrollto">Get Started</a>
                         <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
                     </div>
                 </div>
@@ -196,8 +196,8 @@
 
                     </div>
 
-                    <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("~/css/assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
-                </div>
+                    @*<div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("~/css/assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
+                </div>*@
 
             </div>
         </section><!-- End Why Us Section -->
