--- a/InventoryManager.MVC/Views/User/Index.cshtml
+++ b/InventoryManager.MVC/Views/User/Index.cshtml
@@ -1,14 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-
+﻿@{
+    ViewData["Title"] = "User Dasboard";
 }
 
 @if (@ViewBag.UserLoggedName != null)
 {
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <div class="alert alert-success " >
         <strong>Hello and welcome</strong> @ViewBag.UserLoggedName <span>UserId:</span> @ViewBag.UserLoggedID
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+       
     </div>
 }
