--- a/InventoryManager.MVC/Views/Product/Edit.cshtml
+++ b/InventoryManager.MVC/Views/Product/Edit.cshtml
@@ -22,9 +22,9 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
+           
+                <input type="hidden" asp-for="UserId" class="form-control" />
+            
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
