--- a/InventoryManager.MVC/Views/Sales/AddNew.cshtml
+++ b/InventoryManager.MVC/Views/Sales/AddNew.cshtml
@@ -1,17 +1,14 @@
 ﻿@using InventoryManager.DAL.Enums;
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
-    ViewData["Title"] = "Add Product";
+    ViewData["Title"] = "Add Sale";
 }
 
-@model InventoryManager.BLL.Models.ProductViewModel;
+@model InventoryManager.BLL.Models.SalesViewModel;
 
-<h2>Add New Product</h2>
+<h2>New Sale</h2>
 
 
-<form class="col-7" asp-controller="Product" asp-action="Add">
+<form class="col-7" asp-controller="Sales" asp-action="Add">
 
     @if (@ViewBag.ErrMsg != null)
     {
@@ -26,49 +23,43 @@
 
 
     <div class="mb-3">
-        
+      
         <input type="hidden" class="form-control" asp-for="@Model.UserId">
     </div>
 
+    <div class="mb-3">
+        <input type="hidden" class="form-control" asp-for="@Model.ProductId">
+    </div>
 
     <div class="mb-3">
         <label asp-for="@Model.Name" class="form-label"></label>
-        <input class="form-control" asp-for="@Model.Name">
+        <input class="form-control" asp-for="@Model.Name" >
         <span asp-validation-for="Name"></span>
     </div>
 
 
     <div class="mb-3">
         <label asp-for="@Model.Price" class="form-label"></label>
-        <input class="form-control" asp-for="@Model.Price">
+        <input class="form-control" asp-for="@Model.Price" >
         <span asp-validation-for="Price" class="alert-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <label asp-for="@Model.Description" class="form-label"></label>
-        <textarea class="form-control" asp-for="@Model.Description"></textarea>
-        <span asp-validation-for="Description" class="alert-danger"></span>
     </div>
 
     <div class="mb-3">
 
         <label asp-for="@Model.Category" class="form-label"></label>
-        <select class="form-select" aria-label="Default select example" asp-for="@Model.Category" asp-items="Html.GetEnumSelectList <Category>()">
+        <select class="form-select"  aria-label="Default select example" asp-for="@Model.Category" asp-items="Html.GetEnumSelectList <Category>()">
             <option selected="" value="">Pick a Category</option>
-             <span asp-validation-for="Category" class="alert-danger"></span>
+            <span asp-validation-for="Category" class="alert-danger"></span>
         </select>
     </div>
 
     <div class="mb-3">
+        <span>Quantity you want to purchase</span> <br />
         <label asp-for="@Model.Quantity" class="form-label"></label>
         <input class="form-control" asp-for="@Model.Quantity">
         <span asp-validation-for="Quantity" class="alert-danger"></span>
     </div>
-    <div class="mb-3">
-        <label asp-for="@Model.BrandName" class="form-label"></label>
-        <input class="form-control" asp-for="@Model.BrandName">
-        <span asp-validation-for="BrandName" class="alert-danger"></span>
-    </div>
+
 
 
     <button type="submit" class="btn btn-primary">Submit</button>
