--- a/InventoryManager.MVC/Views/User/Edit.cshtml
+++ b/InventoryManager.MVC/Views/User/Edit.cshtml
@@ -17,8 +17,16 @@
         </div>
     }
 
+    @if (@ViewBag.SuccMsg != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Success!</strong> @ViewBag.SuccMsg
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+
     <div class="col-md-4">
-        <form asp-action="Save" asp-controller="Product">
+        <form asp-action="UpdateProfile" asp-controller="User">
             <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" asp-for="UserId" />
           
@@ -38,6 +46,11 @@
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group" style="margin-top: 10px">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
